--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,17 @@ dependencies = [
     "path>=17.1.1",
     "pyspark>=4.0.1",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "python-semantic-release>=9.8.2",
+]
+
+[tool.semantic_release]
+branch = "main"
+version_toml = "pyproject.toml:project.version"
+commit_parser = "angular"
+changelog_file = "CHANGELOG.md"
+build_command = "uv build"
+upload_to_repository = false
+upload_to_release = false
