--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Install uv (with Python 3.12)
-        uses: astral-sh/setup-uv@v3
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
+
+      - name: Install uv CLI
+        uses: astral-sh/setup-uv@v3
 
       - name: Sync dependencies (dev extras)
         run: uv sync --extra dev
