--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ dependencies = [
     "jupyter>=1.1.1",
     "pandas>=2.3.3",
     "path>=17.1.1",
+    "pre-commit>=4.4.0",
     "pyspark>=4.0.1",
+    "pytest>=9.0.1",
 ]
 
 [project.optional-dependencies]
